outputs/workspace_output_1773033935_6976.txt
  File "<stdin>", line 11
    "`<div style="font-size:12px;color:var(--text-muted);margin-top:.3rem">"
                             ^
SyntaxError: invalid decimal literal
